Added CSS styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="r-lst">
         <li><a href="recipes/mac.html">Macaroni and Cheese</a></li>
         <li><a href="recipes/beefbowl.html">Korean Ground Beef Bowl</a></li>
         <li><a href="recipes/frenchdip.html">French Dip Sandwiches</a></li>
