--- a/recipes/beefbowl.html
+++ b/recipes/beefbowl.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
     <h1>Korean Ground Beef Bowl</h1>
-    <img src="../media/beefbowl.webp" alt="a korean style ground beef bowl" width="400">
+    <img src="../media/beefbowl.webp" alt="a korean style ground beef bowl" class="center">
     <h2>Description</h2>
     <p>This Korean beef bowl is quick and easy to make. The ingredients can easily be adjusted to suit your taste. Serve
         over warm rice or spiralized vegetables.</p>
@@ -36,8 +37,8 @@
         <li>Serve over hot cooked rice; garnish with sesame seeds and remaining green onions. </li>
     </ol>
 
-    <br>
-    <a href="../index.html">Home</a>
+
+    <p class="link-back"><a href="../index.html">Home</a></p>
 
 </body>
 
