--- a/recipes/frenchdip.html
+++ b/recipes/frenchdip.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
     <h1>French Dip Sandwich</h1>
-    <img src="../media/frenchdip.webp" alt="a french dip on a bun" width="400">
+    <img src="../media/frenchdip.webp" alt="a french dip on a bun" class="center">
     <h2>Description</h2>
     <p>A French dip sandwich that is quick and easy and the whole family will love.</p>
     <p>Easy to make, less than 20 minutes, and incredibly delicious!</p>
@@ -32,8 +33,8 @@
             of warm broth for dipping. </li>
     </ol>
 
-    <br>
-    <a href="../index.html">Home</a>
+
+    <p class="link-back"><a href="../index.html">Home</a></p>
 
 </body>
 
