--- a/recipes/mac.html
+++ b/recipes/mac.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
     <h1>Macaroni and Cheese</h1>
-    <img src="../media/mac.webp" alt="a bowl of macaroni and cheese" width="400">
+    <img src="../media/mac.webp" alt="a bowl of macaroni and cheese" class="center">
     <h2>Description</h2>
     <p>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty
         dollars to prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting.
@@ -40,8 +41,8 @@
         <li>Drain macaroni and fold into cheese sauce until coated. </li>
     </ol>
 
-    <br>
-    <a href="../index.html">Home</a>
+
+    <p class="link-back"><a href="../index.html">Home</a></p>
 
 </body>
 
